--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,13 @@ name: Rust
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
+    paths:
+      - '**/*.rs'
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
+    paths:
+      - '**/*.rs'
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,9 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: rustup update
-      - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
+    - uses: actions/checkout@v4
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
