--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,5 @@
-[workspace]
-members = [
-    ".",
-    "example"
-]
-
 [package]
-name = "fast_log"
+name = "fastlog"
 version = "1.7.6"
 description = "Rust async log High-performance asynchronous logging"
 readme = "README.md"
@@ -13,7 +7,6 @@ authors = ["ce <zhuxiujia@qq.com>"]
 repository = "https://github.com/rbatis/fast_log"
 edition = "2021"
 license = "MIT"
-keywords = ["metrics", "async", "tracing"]
 
 [features]
 default = ["runtime_thread"]
@@ -22,14 +15,29 @@ lz4 = ["lz4_flex"]
 runtime_thread = []
 
 [dependencies]
-fastdate = "0.3"
-log = { version = "0.4", features = ["std"] }
-crossbeam-utils = "0.8"
-crossbeam = "0.8"
-crossbeam-channel = "0.5"
-dark-std = "0.2"
-parking_lot = "0.12"
-zip = { version = "2.2.0", optional = true }
-lz4_flex = { version = "0.11", optional = true }
-flate2 = { version = "1.0", optional = true }
+fastdate = { git = "https://github.com/helicex-rs/fastdate.git", tag = "v0.3.34" }
+log = { version = "~0.4", features = ["std"] }
+crossbeam-utils = "~0.8"
+crossbeam = "~0.8"
+crossbeam-channel = "~0.5"
+dark-std = "~0.2"
+parking_lot = "~0.12"
+zip = { version = "~2.2", optional = true }
+lz4_flex = { version = "~0.11", optional = true }
+flate2 = { version = "~1.0", optional = true }
 
+[dev-dependencies]
+criterion = "~0.5"
+
+[[bench]]
+name = "log"
+harness = false
+
+[[bench]]
+name = "log_file"
+harness = false
+
+[profile.bench]
+lto = true
+opt-level = 3
+codegen-units = 1
