--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fastlog"
-version = "1.7.6"
+version = "2.0.0"
 description = "Rust async log High-performance asynchronous logging"
 readme = "README.md"
 authors = ["ce <zhuxiujia@qq.com>"]
@@ -11,19 +11,15 @@ license = "MIT"
 [features]
 default = ["runtime_thread"]
 gzip = ["flate2"]
-lz4 = ["lz4_flex"]
 runtime_thread = []
 
 [dependencies]
-fastdate = { git = "https://github.com/helicex-rs/fastdate.git", tag = "v0.3.34" }
+fastdate = { git = "https://github.com/sailcex/fastdate.git", tag = "v0.3.34" }
 log = { version = "~0.4", features = ["std"] }
 crossbeam-utils = "~0.8"
-crossbeam = "~0.8"
 crossbeam-channel = "~0.5"
 dark-std = "~0.2"
 parking_lot = "~0.12"
-zip = { version = "~2.2", optional = true }
-lz4_flex = { version = "~0.11", optional = true }
 flate2 = { version = "~1.0", optional = true }
 
 [dev-dependencies]
